--- a/Vistas/ABMArticulos.xaml
+++ b/Vistas/ABMArticulos.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="ABMArticulos" Height="450" Width="600" Loaded="Window_Loaded"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
+        Title="Artículos" Height="680" Width="900" Loaded="Window_Loaded"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
      <ObjectDataProvider
         x:Key="LIST_ARTICULO"
@@ -25,6 +26,129 @@
             </DockPanel>
         </Border>
 
+        <StackPanel Name="contentGrid" Margin="30,50,30,30" DataContext="{Binding Source={StaticResource ResourceKey=LIST_ARTICULO}}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="ShoppingBasket" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Artículos" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
+                <Button Grid.Column="1" x:Name="btnNuevoArt" HorizontalAlignment="Right" ToolTip="Agregar un nuevo artículo" Content="+ Nuevo Artículo" Margin="20,0" Style="{StaticResource ButtonFormBlack}" Click="btn_Agregar"></Button>
+            </Grid>
+            <DockPanel HorizontalAlignment="Stretch" Height="400" Margin="0,10,0,0">
+                <Button Width="80" BorderBrush="Transparent" Background="Transparent" Height="300" Margin="0,20" Style="{StaticResource ButtonFormBlackOld}" Click="btn_prev_Click">
+                    <Button.Content>
+                        <fa:ImageAwesome Icon="ChevronLeft" Margin="18" Foreground="#fefefe" ></fa:ImageAwesome>
+                    </Button.Content>
+                </Button>
+                
+                <Image Margin="30,0,30,0" Name="imgArticulo" Source="{Binding Art_Imagen}" Stretch="Fill" VerticalAlignment="Center" Height="auto" Width="270" />
+
+                <Grid Width="300" Margin="0,40">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <!---->
+                    <TextBlock Grid.Row="0" Text="{Binding Art_Descrip}" Style="{StaticResource FormTitle}"></TextBlock>
+                    <DockPanel Grid.Row="1">
+                        <fa:ImageAwesome Icon="Dollar" Foreground="White" Height="20" Margin="30,0,10,0"></fa:ImageAwesome>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Text="{Binding Art_Precio}" Style="{StaticResource FormDescription}"></TextBlock>
+                    </DockPanel>
+                    <DockPanel Grid.Row="2">                        
+                        <Label Style="{StaticResource FormDescription}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="¿Hay stock?: " Margin="30,0,10,0" HorizontalAlignment="Center"></Label>
+                        <CheckBox  IsChecked="{Binding Art_Manejo_Stock}" IsEnabled="False" VerticalAlignment="Center">
+                            <CheckBox.LayoutTransform>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5" />
+                            </CheckBox.LayoutTransform>
+                        </CheckBox>
+                    </DockPanel>
+                    <DockPanel Grid.Row="3">                        
+                        <Label Style="{StaticResource FormDescription}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="Familia: " Margin="30,0,10,0" HorizontalAlignment="Center"></Label>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Text="{Binding Familia.Fam_Descrip}" Style="{StaticResource FormDescription}"></TextBlock>
+                    </DockPanel>
+                    <DockPanel Grid.Row="4">                        
+                        <Label Style="{StaticResource FormDescription}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="Categoría: " Margin="30,0,10,0" HorizontalAlignment="Center"></Label>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Text="{Binding Categoria.Cat_Descrip}" Style="{StaticResource FormDescription}"></TextBlock>
+                    </DockPanel>
+                    <DockPanel Grid.Row="5">                        
+                        <Label Style="{StaticResource FormDescription}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="UM: " Margin="30,0,10,0" HorizontalAlignment="Center"></Label>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Text="{Binding Unidad_Medida.Um_Descrip}" Style="{StaticResource FormDescription}"></TextBlock>
+                    </DockPanel>
+                    <DockPanel Grid.Row="6">                        
+                        <Label Style="{StaticResource FormDescription}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="Código: " Margin="30,0,10,0" HorizontalAlignment="Center"></Label>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Name="txbCodigo" Text="{Binding Art_Id}" Style="{StaticResource FormDescription}"></TextBlock>
+                    </DockPanel>
+                </Grid>
+                
+                <Button Width="80" Height="300" BorderBrush="Transparent" Background="Transparent" HorizontalAlignment="Right" Margin="0,20" Style="{StaticResource ButtonFormBlackOld}" Click="btn_next_Click">
+                    <Button.Content>
+                        <fa:ImageAwesome Icon="ChevronRight" Margin="18" Foreground="#fefefe" ></fa:ImageAwesome>
+                    </Button.Content>
+                </Button>
+            </DockPanel>
+            <Grid Height="59">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                
+                <Button Grid.Column="0" Style="{StaticResource ButtonFormBlack}" HorizontalAlignment="Left" Click="btn_first_Click">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="AngleDoubleLeft" Foreground="white" Height="12"></fa:ImageAwesome>
+                            <TextBlock Text="Ir al primer artículo" Foreground="white" FontSize="14" Margin="10,0"></TextBlock>
+                        </DockPanel>                        
+                    </Button.Content>
+                </Button>
+                
+                <Button Grid.Column="1" Style="{StaticResource ButtonFormBlack}" HorizontalAlignment="Center" Click="btnShowList_Click">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="List" Height="14" Foreground="White" Margin="0,0,10,0"></fa:ImageAwesome>
+                            <TextBlock Text="Ver lista de artículos" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                
+                <Button Grid.Column="2" Style="{StaticResource ButtonFormBlack}" HorizontalAlignment="Right" Click="btn_last_Click">
+                    <Button.Content>
+                        <DockPanel>
+                            <TextBlock Text="Ir al último artículo" Foreground="white" FontSize="14" Margin="10,0"></TextBlock>                        
+                            <fa:ImageAwesome Icon="AngleDoubleRight" Foreground="white" Height="12"></fa:ImageAwesome></DockPanel>                        
+                    </Button.Content>
+                </Button>
+            </Grid>
+            <DockPanel Height="60" Margin="0,20" HorizontalAlignment="Center">
+                <Button Grid.Column="2" Style="{StaticResource ButtonFormBlack}" Margin="10,0" Click="btnModifArt_Click">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar Artículo" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button Grid.Column="2" Style="{StaticResource ButtonFormRed}" Margin="10,0" Click="btnDeleteArt_Click">
+                   <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar Artículo" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+            </DockPanel>
+        </StackPanel>
+
+        <!--
         <Grid Margin="0,50,0,0" Name="contentGrid" DataContext="{Binding Source={StaticResource ResourceKey=LIST_ARTICULO}}">
 
             <Grid.RowDefinitions>
@@ -83,8 +207,9 @@
                 
             
             </Grid>
+        
             <Image Grid.Row="1" Height="75" HorizontalAlignment="Left" Margin="441,86,0,0" Name="imgArticulo" Source="{Binding Art_Imagen}" Stretch="Fill" VerticalAlignment="Top" Width="126" />
         </Grid>
-
+        -->
     </Grid>
 </Window>
