--- a/Vistas/winABMClientes.xaml
+++ b/Vistas/winABMClientes.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        Title="winABMClientes" MinHeight="520" MinWidth="800" Height="520" Width="800" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+        Title="Clientes" MinHeight="520" MinWidth="800" Height="520" Width="800" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
 
         <Style TargetType="ToolTip">
@@ -31,7 +32,7 @@
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" ToolTip="Maximizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" ToolTip="Minimizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblWinTitle" Content="Clientes" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
@@ -51,18 +52,22 @@
                     <ColumnDefinition Width="50*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Clientes" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,10"></Label>
-                
-                <Button Grid.Column="1" x:Name="btnAddCli" HorizontalAlignment="Right" ToolTip="Agregar un nuevo cliente" Content="+ Nuevo Cliente" Margin="20,0" Height="30" Width="130" Click="btn_NuevoCliente" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="AddressBookOutline" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Clientes" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
+                <Button Grid.Column="1" x:Name="btnAddCli" HorizontalAlignment="Right" ToolTip="Agregar un nuevo cliente" Content="+ Nuevo Cliente" Margin="20,0" Click="btn_NuevoCliente" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <Label Content="Buscar por nombre:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
-                <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por nombre:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel> <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
 
 
-            <ListView Grid.Row="2" Name="lvwClientes" Width="740" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_CLIENTES}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" >
+            <ListView Grid.Row="2" Name="lvwClientes" Width="740" VerticalAlignment="Top" HorizontalAlignment="Center" Height="220" ItemsSource="{Binding Source= {StaticResource VISTA_CLIENTES}}" IsSynchronizedWithCurrentItem="True" Background="#232325" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" >
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -111,8 +116,22 @@
             </ListView>
 
             <DockPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
-                <Button x:Name="btnModifUsr" ToolTip="Actualizar el cliente seleccionado" Content="Actualizar Cliente" Margin="7" Height="40" Width="150" Click="btn_ModifCliente" Style="{StaticResource ButtonFormBlack}"></Button>
-                <Button x:Name="btnDeleteusr" ToolTip="Eliminar el cliente seleccionado" Content="Eliminar Cliente" Margin="7" Height="40" Width="150" Click="btn_ElimCliente" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+                <Button x:Name="btnModifUsr" ToolTip="Actualizar el cliente seleccionado" Margin="7" Click="btn_ModifCliente" Style="{StaticResource ButtonFormBlack}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar Cliente" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="btnDeleteusr" ToolTip="Eliminar el cliente seleccionado" Margin="7" Click="btn_ElimCliente" Style="{StaticResource ButtonFormRed}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar Cliente" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
             </DockPanel>
             
         </Grid>
