--- a/Vistas/winAcercaDe.xaml
+++ b/Vistas/winAcercaDe.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Vistas.winAcercaDe"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winAcercaDe" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="auto" Width="500" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" AllowDrop="True" Drop="Window_Drop" Loaded="Window_Loaded">
+        Title="Acerca De" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="auto" Width="500" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" AllowDrop="True" Drop="Window_Drop" Loaded="Window_Loaded">
     <Window.Resources>
         <Style x:Key="SliderButtonStyle" TargetType="{x:Type RepeatButton}">
             <Setter Property="SnapsToDevicePixels" Value="true"/>
