--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -4,7 +4,7 @@
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        Title="winAltaItemPedido" Height="650" Width="600"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow"
+        Title="Rellene el Pedido" Height="650" Width="600"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow"
         >
     <Window.Resources>
         <ObjectDataProvider
@@ -31,24 +31,21 @@
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
                 <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="Alta de Nuevo Pedido" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Label Name="lblWinTitle" Content="Rellene el Pedido" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
         
         <StackPanel Margin="10,50,10,10">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Label Name="lblNewItemTitle" Width="auto" Content="Pedido N°: " VerticalAlignment="Top" Style="{StaticResource FormTitle}" Height="50" Margin="120,6,0,0" />
-                <TextBlock Name="txbNumPedido" Foreground="White" Height="32" Width="66" Style="{StaticResource FormTitle}" Margin="6,6,207,18" Grid.Column="1"></TextBlock>
+            <Grid HorizontalAlignment="Left">
+                <DockPanel Margin="20,0,0,20">
+                    <Label Name="lblNewItemTitle" Width="auto" Content="Pedido N°: " VerticalAlignment="Top" Style="{StaticResource FormTitle}" Height="50"/>
+                    <TextBlock Name="txbNumPedido" Foreground="White" Height="auto" Width="auto" Style="{StaticResource FormTitle}"  Grid.Column="1"></TextBlock>
 
+                </DockPanel>
+                
             </Grid>
-           <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="237" />
 
-
-            <ListView Grid.Row="1" Name="lvwArticulos" Width="550" Grid.Column="1" Height="auto" ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" IsSynchronizedWithCurrentItem="True" SelectionChanged="lvwArticulos_SelectionChanged" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
+            <ListView Margin="0,10" Grid.Row="1" Name="lvwArticulos" Width="550" Grid.Column="1" Height="150" ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" IsSynchronizedWithCurrentItem="True" SelectionChanged="lvwArticulos_SelectionChanged" Background="#232325" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
                 
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
@@ -100,9 +97,9 @@
             </ListView>
             
             <StackPanel Margin="20" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="btnAdd" ToolTip="Agregar el artículo al pedido" Height="auto" Width="auto" Padding="5" Click="btnAdd_Click" Style="{StaticResource ButtonFormBlack}" >
+                <Button Name="btnAdd" ToolTip="Agregar el artículo al pedido" Padding="5" Click="btnAdd_Click" Style="{StaticResource ButtonFormBlack}" >
                     <Button.Content>
-                        <fa:ImageAwesome Icon="PlusCircle" VerticalAlignment="Center" Foreground="#eeeeee" HorizontalAlignment="Center" Height="14" Margin="14,0"></fa:ImageAwesome>
+                        <fa:ImageAwesome Icon="Plus" VerticalAlignment="Center" Foreground="#eeeeee" HorizontalAlignment="Center" Height="20" Margin="14,0"></fa:ImageAwesome>
                     </Button.Content>
                 </Button>
             </StackPanel>
@@ -138,7 +135,7 @@
                  
             </Popup>
 
-            <ListView IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="200" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
+            <ListView IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="150" Width="550" Background="#232325" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -178,9 +175,9 @@
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
-                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Articulo.Art_Descrip}" />
-                        <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Item_Ped_Precio}"/>
-                        <GridViewColumn Width="90" Header="Importe" DisplayMemberBinding="{Binding Item_Ped_Importe}"/>
+                        <GridViewColumn Width="250" Header="Descripción" DisplayMemberBinding="{Binding Articulo.Art_Descrip}" />
+                        <GridViewColumn Width="120" Header="Precio" DisplayMemberBinding="{Binding Item_Ped_Precio}"/>
+                        <GridViewColumn Width="120" Header="Importe" DisplayMemberBinding="{Binding Item_Ped_Importe}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
