--- a/Vistas/winVistaPreviaPedido.xaml
+++ b/Vistas/winVistaPreviaPedido.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winVistaPreviaPedido" Height="auto" Width="500" WindowStartupLocation="CenterScreen" >
+        Title="Factura" Height="auto" Width="500" WindowStartupLocation="CenterScreen" >
 
     <FixedDocument>
           
