--- a/Vistas/winWaiterMenu.xaml
+++ b/Vistas/winWaiterMenu.xaml
@@ -13,7 +13,7 @@
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" ToolTip="Cerrar" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="btnLogout_Click_1"/>
-                <Ellipse Height="15" ToolTip="Mininmizar" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" ToolTip="Minimizar" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblWinTitle" Content="Menú de Mozo - HOLDEM SISTEMA DE GESTIÓN" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
@@ -59,7 +59,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="1" Margin="10,30" VerticalAlignment="Bottom">
                     <TextBlock Foreground="White" Height="24" FontSize="16" HorizontalAlignment="Center" Name="txbUsuario" Margin="0,10"/>
-                    <Button Name="btnLogout" ToolTip="Cerrar la actual sesión" Width="auto" Style="{StaticResource ButtonLogout}" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" Click="btnLogout_Click_1">
+                    <Button Name="btnLogout" ToolTip="Cerrar la sesión actual" Width="auto" Style="{StaticResource ButtonLogout}" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" Click="btnLogout_Click_1">
                         <Button.Content>
                             <DockPanel Margin="3">
                                 <fa:ImageAwesome Icon="SignOut" Foreground="white" Height="12" Margin="5,0" VerticalAlignment="Center"></fa:ImageAwesome>
