--- a/Vistas/winCategorias.xaml
+++ b/Vistas/winCategorias.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winCategorias" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
+        Title="Alta de Nueva Categoría" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Cat"
