--- a/Vistas/winHistorialLogin.xaml
+++ b/Vistas/winHistorialLogin.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="Vistas.winHistorialLogin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        Title="winHistorialLogin" MinHeight="600" MinWidth="800" Height="600" Width="800" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+        Title="Historial de Logs" MinHeight="600" MinWidth="800" Height="600" Width="800" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="LIST_LOGS"
@@ -31,7 +32,7 @@
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
                 <Ellipse Height="15" ToolTip="Minimizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="Historial de Login" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Label Name="lblWinTitle" Content="Historial de Logs" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
 
@@ -43,12 +44,53 @@
             </Grid.RowDefinitions>
 
             <StackPanel Grid.Row="0">
-                <Label Content="Historial de Logs" HorizontalAlignment="center" VerticalAlignment="Center" Style="{StaticResource FormTitle}"></Label>
-                <Label Content="Buscar por usuario:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="History" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Historial de Logs" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por usuario:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel>
                 <TextBox Margin="10" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
 
-            <ListView Grid.Row="1" Name="lvwLogs" Width="700" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="auto" ItemsSource="{Binding Source= {StaticResource VISTA_LOGS}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" SelectionChanged="lvwLogs_SelectionChanged">
+            <ListView Grid.Row="1" Name="lvwLogs" Width="700" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="auto" ItemsSource="{Binding Source= {StaticResource VISTA_LOGS}}" IsSynchronizedWithCurrentItem="True" Background="#232325" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" SelectionChanged="lvwLogs_SelectionChanged">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <Border CornerRadius="2" SnapsToDevicePixels="True"  
+                                BorderThickness="{TemplateBinding BorderThickness}"   
+                                BorderBrush="{TemplateBinding BorderBrush}"   
+                                Background="{TemplateBinding Background}">
+                                        <Border Name="InnerBorder" CornerRadius="1" BorderThickness="1">
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition MaxHeight="11" />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <GridViewRowPresenter Grid.RowSpan="2"   
+                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"   
+                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                            </Grid>
+                                        </Border>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="true" >
+                                <Setter Property="Background" Value="#5e8eb5" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" Value="#505157"></Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Log_Id}"/>
@@ -62,7 +104,7 @@
                 </ListView.View>
             </ListView>
 
-            <Button Grid.Row="2" ToolTip="Actualizar la descripción del log seleccionado" Content="Actualizar descripción" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="30" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Width="185" Click="btnActualizar_Click" />
+            <Button Grid.Row="2" ToolTip="Actualizar la descripción del log seleccionado" Content="Actualizar descripción" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Click="btnActualizar_Click" />
             
         </Grid>
     </Grid>
