--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Vistas.winMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winMesas"  x:Name="window" MouseLeftButtonDown="moveWindow" Width="1200" Height="680" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
+        Title="Mesas"  x:Name="window" MouseLeftButtonDown="moveWindow" Width="1200" Height="680" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
         xmlns:converter="clr-namespace:Vistas"
         >
         <!--xmlns:svc="clr-namespace:Vistas;assembly=winMesas"-->
@@ -20,7 +20,7 @@
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
                 <Ellipse Height="15" ToolTip="Minimizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="Gestión de Mesas - HOLDEM" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Label Name="lblWinTitle" Content="Mesas" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
         <Grid Margin="0,40,0,0">
