--- a/Vistas/winUnidadesDeMedida.xaml
+++ b/Vistas/winUnidadesDeMedida.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winUnidadesDeMedida" Height="450" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="450" MinWidth="400">
+        Title="Alta de Unidad de Medida" Height="450" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="450" MinWidth="400">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_UM"
