--- a/Vistas/winVistaPrevia.xaml
+++ b/Vistas/winVistaPrevia.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winVistaPrevia" Height="500" Width="600"   Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+        Title="Vista Previa de Impresión" Height="500" Width="600"   Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
        
         <Style TargetType="ToolTip">
